# cmake_tutorial

./: README.md
Step1/: CMakeLists.txt
Step1/include/: TutorialConfig.h  TutorialConfig.h.in
Step1/src/: tutorial.cpp
Step2_Adding_Library/: CMakeLists.txt
Step2_Adding_Library/MathFunctions/: CMakeLists.txt
Step2_Adding_Library/MathFunctions/src/: MathFunctions.cpp
Step2_Adding_Library/include/: TutorialConfig.h
Step2_Adding_Library/src/: tutorial.cpp
Step3_Adding_Usage_Requirements_for_a_Library_my_lib/: CMakeLists.txt
Step3_Adding_Usage_Requirements_for_a_Library_my_lib/MathFunctions/: CMakeLists.txt
Step3_Adding_Usage_Requirements_for_a_Library_my_lib/MathFunctions/src/: MathFunctions.cpp  mysqrt.cpp
Step3_Adding_Usage_Requirements_for_a_Library_my_lib/src/: tutorial.cpp
